--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class = "wrapper">
 <main>
 <div>
-<h3 class="about2">Back-end Developer</h3>
+<h3 class="about2"></h3>
 <h1 class="about1">Dominik Smolik</h1>
 <p class="about">Moje główne zainteresowania:
     nauki przyrodnicze, matematyka, programowanie i sztuka.
