--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <ul>
     <li span class="orangeskills"></span><span class="skills-item">HTML(podstawy)</span></li>
     <li span class="orangeskills"></span><span class="skills-item">CSS(podstawy)</span></li>
+    <li span class="orangeskills"></span><span class="skills-item">SQL(średnio zaawansowany)</span></li>
     <li span class="orangeskills"></span><span class="skills-item">Java(podstawy)</span></li>
     <li span class="orangeskills"></span><span class="skills-item">Git(podstawy)</span></li>
     <li span class="orangeskills"></span><span class="skills-item">Latex</span</li>
