--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h3 class="about3">Koordynator aukcji <span class="firm">Artkrak Dom Aukcyjny</span></h3>
 <p class="about4">Maj 2024 - obecnie</p>
 <ul class="links">
-<li>Przygotowywanie obiektów na aukcje</li>
+<li>Wybór obiektów na aukcje</li>
 <li>Kontakt z klientem</li>
 <li>Redakcja katalogów aukcyjnych</li>
 
@@ -47,8 +47,18 @@
 </div>
 
 <div>
+<h3 class="about3">Wykonawca podobrazi malarskich <span class="firm">B.Art</span></h3>
+<p class="about4">Grudzień 2018 - Kwiecień 2024</p>
+<ul class="links">
+<li>Wykonywanie podobrazi malarskich tradycyjnymi metodami</li>
+<li>Sprzedaż i obsługa klienta</li>
+<li>Obsługa sprzedaży internetowej</li>
+</ul>
+</div>
+
+<div>
 <h3 class="about3">Asystent Projektu Aukcyjnego <span class="firm">Sopocki Dom Aukcyjny/Antykwariat AB</span></h3>
-<p class="about4">Listopad 2012 - Kwiecień 2024</p>
+<p class="about4">Listopad 2012 - Listopad 2018</p>
 <ul class="links">
 <li>Redakcja katalogów aukcyjnych i wystawowych</li>
 <li>Kontakt z klientem (właścicielem dzieła sztuki)</li>
@@ -71,6 +81,9 @@
 <p class="about4"><b>Wrzesień 2023 - Styczeń 2024</b></p>
 <h3 class="about3"><span class="firm">Szkoła Programowania Codeaccess</span></h3>
 <p class="about4">Kurs online Back-end Java Developer</p>
+<p class="about4"><b>Październik 2007 - Kwiecień 2009</b></p>
+<h3 class="about3"><span class="firm">Politechnika Krakowska</span></h3>
+<p class="about4">Studia podyplomowe z zakresu Konserwacji, Architektury i Aranżacji Wnętrz Obiektów Sakralnych</p>
 <p class="about4"><b>Październik 2002 - Październik 2007</b></p>
 <h3 class="about3"><span class="firm">Papieska Akademia Teologiczna</span></h3>
 <p class="about4">Studia magisterskie na Wydziale Historii Sztuki</p>
@@ -94,7 +107,7 @@
     <ul>
     <li span class="orangeskills"></span><span class="skills-item">HTML(podstawy)</span></li>
     <li span class="orangeskills"></span><span class="skills-item">CSS(podstawy)</span></li>
-    <li span class="orangeskills"></span><span class="skills-item">SQL(średnio zaawansowany)</span></li>
+    <li span class="orangeskills"></span><span class="skills-item">SQL(podstawy)</span></li>
     <li span class="orangeskills"></span><span class="skills-item">Java(podstawy)</span></li>
     <li span class="orangeskills"></span><span class="skills-item">Git(podstawy)</span></li>
     <li span class="orangeskills"></span><span class="skills-item">Latex</span</li>
