--- a/index.html
+++ b/index.html
@@ -58,13 +58,23 @@
 
 <div>
 <h3 class="about3">Asystent Projektu Aukcyjnego <span class="firm">Sopocki Dom Aukcyjny/Antykwariat AB</span></h3>
-<p class="about4">Listopad 2012 - Listopad 2018</p>
+<p class="about4">Listopad 2014 - Listopad 2018</p>
 <ul class="links">
 <li>Redakcja katalogów aukcyjnych i wystawowych</li>
 <li>Kontakt z klientem (właścicielem dzieła sztuki)</li>
 <li>Poszukiwanie i pozyskiwanie dzieł sztuki do sprzedaży</li>
 </ul>
-</div>  
+</div> 
+
+<div>
+<h3 class="about3">Specjalista ds. sprzedaży <span class="firm">Global Telemarketing</span></h3>
+<p class="about4">Listopad 2012 - Listopad 2014</p>
+<ul class="links">
+<li>Telefoniczna sprzedaż usług firmy Orange</li>
+<li>Realizowanie celów sprzedażowych</li>
+<li>Obsługa posprzedażowa</li>
+</ul>
+</div>
 
 <div>
 <h3 class="about3">Sprzedawca - doradca klienta <span class="firm">Hergon sklep dla plastyków</span></h3>
