--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+jalista<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
@@ -47,18 +47,18 @@
 </div>
 
 <div>
-<h3 class="about3">Wykonawca podobrazi malarskich <span class="firm">B.Art</span></h3>
+<h3 class="about3">Specjalista ds. obsługi sklepu internetowego <span class="firm">Księgarnia pod Globusem</span></h3>
 <p class="about4">Grudzień 2018 - Kwiecień 2024</p>
 <ul class="links">
-<li>Wykonywanie podobrazi malarskich tradycyjnymi metodami</li>
-<li>Sprzedaż i obsługa klienta</li>
 <li>Obsługa sprzedaży internetowej</li>
+<li>Obsługa zamówień</li>
+<li>Obsługa reklamacji</li>
 </ul>
 </div>
 
 <div>
 <h3 class="about3">Asystent Projektu Aukcyjnego <span class="firm">Sopocki Dom Aukcyjny/Antykwariat AB</span></h3>
-<p class="about4">Listopad 2014 - Listopad 2018</p>
+<p class="about4">Listopad 2012 - Listopad 2018</p>
 <ul class="links">
 <li>Redakcja katalogów aukcyjnych i wystawowych</li>
 <li>Kontakt z klientem (właścicielem dzieła sztuki)</li>
@@ -66,15 +66,6 @@
 </ul>
 </div> 
 
-<div>
-<h3 class="about3">Specjalista ds. sprzedaży <span class="firm">Global Telemarketing</span></h3>
-<p class="about4">Listopad 2012 - Listopad 2014</p>
-<ul class="links">
-<li>Telefoniczna sprzedaż usług firmy Orange</li>
-<li>Realizowanie celów sprzedażowych</li>
-<li>Obsługa posprzedażowa</li>
-</ul>
-</div>
 
 <div>
 <h3 class="about3">Sprzedawca - doradca klienta <span class="firm">Hergon sklep dla plastyków</span></h3>
