--- a/index.html
+++ b/index.html
@@ -36,8 +36,20 @@ jalista<!DOCTYPE html>
 
 <div>
 <h2 class="projects">Doświadczenie zawodowe</h2>
+<h3 class="about3">Młodszy Bibliotekarz <span class="firm">Biblioteka Kraków</span></h3>
+<p class="about4">Styczeń 2025 - obecnie</p>
+<ul class="links">
+<li>Bieżąca obsługa użytkowników, w tym rejestracja nowo zapisanych osób, wypożyczeń, zwrotów i rezerwacji</li>
+<li>Wykonywanie prac bibliotekarskich związanych z księgozbiorem</li>
+<li>Obsługa programu bibliotecznego Sowa</li>
+
+</ul>
+</div>
+
+<div>
+<h2 class="projects">Doświadczenie zawodowe</h2>
 <h3 class="about3">Koordynator aukcji <span class="firm">Artkrak Dom Aukcyjny</span></h3>
-<p class="about4">Maj 2024 - obecnie</p>
+<p class="about4">Maj 2024 - Grudzień 2024</p>
 <ul class="links">
 <li>Wybór obiektów na aukcje</li>
 <li>Kontakt z klientem</li>
@@ -47,12 +59,12 @@ jalista<!DOCTYPE html>
 </div>
 
 <div>
-<h3 class="about3">Specjalista ds. obsługi sklepu internetowego <span class="firm">Księgarnia pod Globusem</span></h3>
+<h3 class="about3">Sprzedawca <span class="firm">B.Art Podobrazia z duszą</span></h3>
 <p class="about4">Grudzień 2018 - Kwiecień 2024</p>
 <ul class="links">
+<li>Sprzedaż artykułów plastycznych</li>
+<li>Wykonywanie podobrazi malarskich</li>
 <li>Obsługa sprzedaży internetowej</li>
-<li>Obsługa zamówień</li>
-<li>Obsługa reklamacji</li>
 </ul>
 </div>
 
